# routes/user.js
@@ -3,6 +3,7 @@ const user = require('../controllers/user');
 
 router.get('/', user.getAllUsers)
 router.post('/', user.createUser)
+router.get('/:id',user.getUserById)
 
 
 module.exports = router;
